fixed URI creation for web page addresses on Windows