@@ -37,16 +37,13 @@ public final class CsoundManualAction implements ActionListener {
     public void actionPerformed(ActionEvent e) {
         File manualDir = InstalledFileLocator.getDefault().
                 locate("csoundManual", "csound-manual", false);
-
-        String url = "file://" + manualDir.getAbsolutePath() + "/index.html";
-
-        url = url.replace(" ", "%20");
-
+        File index = new File(manualDir, "index.html");
+        
         try {
             if (Desktop.isDesktopSupported()) {
-                Desktop.getDesktop().browse(new URI(url));
+                Desktop.getDesktop().browse(index.toURI());
             } else {
-                URLDisplayer.getDefault().showURL(new URL(url));
+                URLDisplayer.getDefault().showURL(index.toURL());
             }
         } catch (Exception ex) {
             Exceptions.printStackTrace(ex);
